ephy-location-entry: Add touch support for primary/secondary icon

Currently it is neither possible to open the certificate information nor adding a bookmark using a touch device.

Adding a check for GDK_TOUCH_BEGIN within the item callback fixes it.

Closes: https://bugzilla.gnome.org/show_bug.cgi?id=792876